This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

27-Apr-2004 (Lars Duening)  (3.3.533)
  - (strfuns.c) Efun convert_charset(): The parameters to iconv_open() were
      reversed.
  - (smalloc.c) If esbrk() can allocated more memory than asked, the
      difference is now returned in a pointer-argument instead of
      a global variable - much easier to understand this way.

26-Apr-2004 (Lars Duening)  (3.3.532)
  - (actions.c) Added missing include.
  - (configure) Corrected bison recognition under AIX/Visual Age 6.
  - (configure) Test if iconv() takes a non-const char** as input string.
  - (random.c) Adapted for AIX/Visual Age 6.
  - (interpret.c) <int> -= <float> subtracted a random number (reported by
       Acius).
  - (efuns.c, port.h) Efun reverse() can bit-reverse integers.
  - (etc/lpc.xml) Menaures provided a new version.

24-Apr-2004 (Lars Duening)  (3.3.531)
  - (smalloc.c) Corrected the permanent block allocation statistics.
  - (func_spec) Deprecated efun make_shared_string().
  - (func_spec, strfuns) New efun convert_charset() (thanks, Philip).

24-Apr-2004 (Lars Duening)  (3.3.530)
  - (xalloc.c, smalloc.c) Changed the memory dump output format so that all the
       important information is on one line. Also increased the size of
       the initial small chunk so that all the driver's own tables fit
       into it.

24-Apr-2004 (Lars Duening)  (3.3.529)
  - (comm.c) Integrated Uwe's patch to open IPv6 connections with
       net_connect() (thanks!).
  - (efun.de/) A few more manpage translations.
  - (func_spec, efuns) New efun reverse() (provided by Ralph, thanks!)
       (f-000113-1, f-990714-7, f-990203-15)

23-Apr-2004 (Lars Duening)  (3.3.528)
  - (main.c) The standard strings are initialized earlier in the startup
       process so that a memory error doesn't cause a coredump.

22-Apr-2004 (Lars Duening)  (3.3.527)