@@ -62,19 +62,21 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 533)
-(Parent-Version lpmud 3-3 532)
+(Project-Version lpmud 3-3 534)
+(Parent-Version lpmud 3-3 533)
 (Version-Log "
-  - (strfuns.c) Efun convert_charset(): The parameters to iconv_open() were
-      reversed.
-  - (smalloc.c) If esbrk() can allocated more memory than asked, the
-      difference is now returned in a pointer-argument instead of
-      a global variable - much easier to understand this way.
+  - (smalloc.c, config.h, efuns.c) If multiple large blocks of the same
+       size are freed, an AVL node is created just for the first one of these
+       blocks. The other blocks are held in a double-linked list hanging
+       off the AVL node. For now, this feature is activated by
+       the macro USE_AVL_FREELIST in config.h. Practive will show if
+       the ratio of free blocks to AVL nodes is large enough to make
+       this useful. (Bug #0000053)
 ")
 (New-Version-Log
 ""
 )
-(Checkin-Time "Tue, 27 Apr 2004 07:27:33 -0600")
+(Checkin-Time "Tue, 27 Apr 2004 20:44:38 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -112,7 +114,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.11 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.76 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.596 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.597 644))
   (HISTORY (lpmud/f/49_HISTORY 1.351 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.20 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -189,7 +191,7 @@
   (src/ed.h (lpmud/f/34_ed.h 1.5.1.6 644))
   (src/ed.c (lpmud/c/33_ed.c 1.32.1.31 644))
   (src/efuns.h (lpmud/l/20_efuns.h 1.13.1.19.1.5 644))
-  (src/efuns.c (lpmud/l/21_efuns.c 1.42.1.47.1.88 644))
+  (src/efuns.c (lpmud/l/21_efuns.c 1.42.1.47.1.89 644))
   (src/exec.h (lpmud/c/32_exec.h 1.34.1.33.1.7 644))
   (src/files.h (lpmud/i/49_files.h 1.2 644))
   (src/files.c (lpmud/i/50_files.c 1.24 644))
@@ -206,7 +208,7 @@
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.15.1.7 644))
   (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.65 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.16 644))
-  (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.54 644))
+  (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.55 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.20 644))
   (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.78 644))
   (src/md5.h (lpmud/l/18_md5.h 1.3 644))
@@ -300,7 +302,7 @@
   (src/simulate.h (lpmud/f/16_simulate.h 1.25.1.33 644))
   (src/simulate.c (lpmud/31_simulate.c 1.88.1.120 644))
   (src/smalloc.h (lpmud/29_smalloc.h 1.16.1.14 644))
-  (src/smalloc.c (lpmud/30_smalloc.c 1.31.1.92 644))
+  (src/smalloc.c (lpmud/30_smalloc.c 1.31.1.93 644))
   (src/sysmalloc.h (lpmud/c/b/33_sysmalloc. 1.2 644))
   (src/sysmalloc.c (lpmud/c/b/34_sysmalloc. 1.6 644))
   (src/sprintf.h (lpmud/f/15_sprintf.h 1.3.1.4 644))
@@ -457,7 +459,7 @@
   ;; Driver-related include files for the mudlib
   (mudlib/sys/comm.h (lpmud/e/b/23_comm.h 1.1 644))
   (mudlib/sys/commands.h (lpmud/d/15_commands.h 1.3.1.4 644))
-  (mudlib/sys/debug_info.h (lpmud/t/6_debug_info 1.21 644))
+  (mudlib/sys/debug_info.h (lpmud/t/6_debug_info 1.22 644))
   (mudlib/sys/driver_hook.h (lpmud/d/30_driver_hoo 1.2.1.6 644))
   (mudlib/sys/debug_message.h (lpmud/k/8_debug_mess 1.3 644))
   (mudlib/sys/erq.h (lpmud/d/29_erq.h 1.5.1.3 644))
@@ -1051,7 +1053,7 @@
   (doc/efun/db_fetch (lpmud/e/27_db_fetch 1.2.1.3 644))
   (doc/efun/db_handles (lpmud/e/33_db_handles 1.1.1.4 644))
   (doc/efun/db_insert_id (lpmud/l/1_db_insert_ 1.2 644))
-  (doc/efun/debug_info (lpmud/o/22_debug_info 1.34 644))
+  (doc/efun/debug_info (lpmud/o/22_debug_info 1.35 644))
   (doc/efun/debug_message (lpmud/o/23_debug_mess 1.1.1.5 644))
   (doc/efun/deep_copy (lpmud/m/29_deep_copy 1.4 644))
   (doc/efun/deep_inventory (lpmud/o/24_deep_inven 1.3 644))
@@ -1541,7 +1543,7 @@
   (doc/efun.de/deep_inventory.de (lpmud/j/b/10_deep_inven 1.1 640))
   (doc/efun.de/deep_copy.de (lpmud/j/b/11_deep_copy. 1.1 640))
   (doc/efun.de/debug_message.de (lpmud/j/b/12_debug_mess 1.1 640))
-  (doc/efun.de/debug_info.de (lpmud/j/b/13_debug_info 1.3 640))
+  (doc/efun.de/debug_info.de (lpmud/j/b/13_debug_info 1.4 640))
   (doc/efun.de/db_insert_id.de (lpmud/u/b/24_db_insert_ 1.1 644))
   (doc/efun.de/db_handles.de (lpmud/u/b/25_db_handles 1.1 644))
   (doc/efun.de/db_fetch.de (lpmud/u/b/26_db_fetch.d 1.1 644))
